# rora

./: .gitignore  CMakeLists.txt  README.md
cmake/: copy_resources.cmake  copy_shaders.cmake  setup_glad.cmake  setup_glfw.cmake  setup_glm.cmake  setup_imgui.cmake
resources/shaders/: vertex.glsl
rora/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
rora/graphics/: CMakeLists.txt  environment.cpp  environment.hpp  graphics.hpp  window.cpp  window.hpp
rora/graphics/rendering/: bytes.h  rendering.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp
rora/graphics/rendering/buffers/: attribute_layout.cpp  attribute_layout.h  ibo.cpp  ibo.h  vao.cpp  vao.h  vbo.cpp  vbo.h
rora/graphics/rendering/details/: bytes.hpp  casts.hpp
rora/graphics/rendering/shaders/: shader.cpp  shader.h
rora/graphics/ui/: ui.hpp  window.cpp  window.hpp
